* Stop escaping quotes in Fuse.String#escapeHTML and stop stripping tags in Fuse.String#unescapeHTML. [Prototype LH #722, #729] [jddalton, mck, SWilk, T.J. Crowder, Tobie Langel] 

* Fix IE bug where Fuse.String#match(pattern) incorrectly sets the pattern's `lastIndex` property. [jddalton]

* Optimize Fuse.String#lastIndexOf and fix a Chrome bug where negative positions aren't set to 0. [jddalton]

* Optimize property lookup speeds by storing references to longer namespaced objects and simplifying method aliases. [jddalton]

* Make Fusebox fallback on Fuse._docEl instead of document HEAD when inserting an iframe. [jddalton]

* Ensure IE8 EMBED elements are extended manually and APPLET/EMBED/OBJECT elements are extended by Element.Simulated methods. [Prototype LH #681] [jddalton, kangax, Nick Stakenburg]

* Avoid an alert in IE8 when testing for ELEMENT_OBJECT_AND_RELATIVES_FAILS_TO_INHERIT_FROM_PROTOTYPE and Java is not installed. [Prototype LH #668] [Andrew Dupont, jddalton, kangax, orv]

* Wrap variable assignments in return statements with parentheses to ensure Chrome 1 support. [jddalton]

* Ensure Fuse.Function, when used as a constructor, makes the default value of `this` equal to the document global and change the `thisArg` assigned by wrappers in Fuse.Fusebox and Fuse.Function. [jddalton]

* Optimize Fuse.String#camelize by using while-loops instead of String#replace. [jddalton, kangax]

* Optimize Element.hasAttribute() by forking if Element#hasAttribute exists. [jddalton, kangax]

* Memoize heavily used Fuse.String methods `capitalize` and `camelize`. [jddalton, kangax]

* Make the Fuse.Class wrapper used for this._super only perform __method.call(this) when no arguments are passed. [jddalton]

* Remove the dollar sign method from the global namespace. [jddalton]

* Ensure Event cache is cleared when there are no event handlers and fix a typo in _winLoadWrapper(). [jddalton]
