@@ -1,3 +1,5 @@
+* Optimize Fuse.Range `max`, `min`, 'size', and `toArray` methods. [Prototype LH #117] [jddalton, Michael M Slusarz]
+
 * Stop escaping quotes in Fuse.String#escapeHTML and stop stripping tags in Fuse.String#unescapeHTML. [Prototype LH #722, #729] [jddalton, mck, SWilk, T.J. Crowder, Tobie Langel] 
 
 * Fix IE bug where Fuse.String#match(pattern) incorrectly sets the pattern's `lastIndex` property. [jddalton]
